--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Title Sujeet</title>
+    <link rel="icon" href="blog.png" />
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
